implement transformer in backend and some refactoring
